# wxTemplate

./: CMakeLists.txt  ProjectConfig.h.in  main.cpp
include/: App.hpp  Frame.hpp
source/: App.cpp  CMakeLists.txt
